--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@
     <section class="portfolio">
       <h1>Our Portfolio</h1>
       <div class="project">
-        <img src="project1.jpg" alt="Project 1" />
-        <h2>Project 1</h2>
-        <p>Description of Project 1.</p>
+        <!-- <img src="project1.jpg" alt="Project 1" /> -->
+        <h2>Stand By</h2>
+        <p>We're working on something great.</p>
       </div>
       <div class="project">
-        <img src="project2.jpg" alt="Project 2" />
-        <h2>Project 2</h2>
-        <p>Description of Project 2.</p>
+        <!-- <img src="project2.jpg" alt="Project 2" /> -->
+        <h2>Stand By</h2>
+        <p>We're working on something great</p>
       </div>
       <!-- Add more project items as needed -->
     </section>
